2006-04-10  Graham Percival  <gpermus@gmail.com>

	* THANKS, Documentation/user/ basic-notation, advanced-notation,
	music-glossary, programming-interface: more minor fixes
	from mailist.

2006-04-10  Erlend Aasland  <erlenda@gmail.com>

	* mf/GNUmakefile: fix for mftrace version >= 1.2.0

2006-04-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/define-context-properties.scm (all-user-translation-properties): 
	* Documentation/user/global.itely (Page formatting): Compile fix.

2006-04-09  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/advanced-notation.itely (Polymetric
	notation): Update the example to use the "+" symbol and add link
	to input/test/compound-time.ly.

2006-04-08  Graham Percival  <gpermus@gmail.com>

	* scm/define-grob-properties.scm: clarify docs for #'direction.

	* scm/define-context-properties.scm: update old \property override.

	* Documentation/user/ advanced-notation, global, lilypond-book:
	more minor doc updates.

2006-04-07  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/parser.yy (Generic_prefix_music_scm): append lists, not objects.

	* scm/backend-library.scm (search-gs): oops.

2006-04-06  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/lilypond-book.py (output): use base, not filename for href.

	* scm/backend-library.scm: only look for gs.

	* scripts/lilypond-book.py (output): fix printfilename.

	* lily/parser.yy (music_function_musicless_prefix): fold together
	definitions of signature (SCM*) (Music|post_event|chord_body_element)

	* lily/slur.cc (print): only set font-size if not set yet.

	* lily/slur-configuration.cc (add_score): improved layout of debug
	scoring output.

2006-04-05  David Feuer  <David.Feuer@gmail.com>

	* music-drawing-routines.ps (draw_round_box): removed testing artifact.
	(draw_circle): Hopefully fixed regression.
	Improved documentation for several procedures.
	
2006-03-04  Werner Lemberg  <wl@gnu.org>

	* ly/engraver-init.ly (\Score): Add beam-event to quotedEventTypes.
