@@ -4,6 +4,11 @@
 	music-glossary, programming-interface: more minor fixes
 	from mailist.
 
+	* scm/define-grob-properties.scm: clarified direction, thanks Mats!
+
+	* scm/define-context-properties.scm: another old \property update.
+	This time tested for compiling!
+
 2006-04-10  Erlend Aasland  <erlenda@gmail.com>
 
 	* mf/GNUmakefile: fix for mftrace version >= 1.2.0
